--- a/webshop-frontend/src/app/components/add-product/add-product.component.html
+++ b/webshop-frontend/src/app/components/add-product/add-product.component.html
@@ -1,20 +1,19 @@
-<form (submit)="addProduct()">
-    <div>
-      <label>Name:</label>
-      <input [(ngModel)]="product.name" name="name" required />
-    </div>
-    <div>
-      <label>Description:</label>
-      <input [(ngModel)]="product.description" name="description" required />
-    </div>
-    <div>
-      <label>Price:</label>
-      <input [(ngModel)]="product.price" name="price" type="number" required />
-    </div>
-    <div>
-      <label>Image URL:</label>
-      <input [(ngModel)]="product.imageUrl" name="imageUrl" required />
-    </div>
-    <button type="submit">Add Product</button>
-  </form>
-  
+<form (ngSubmit)="addProduct()">
+  <div>
+    <label>Name:</label>
+    <input [(ngModel)]="product.name" name="name" required />
+  </div>
+  <div>
+    <label>Description:</label>
+    <input [(ngModel)]="product.description" name="description" required />
+  </div>
+  <div>
+    <label>Price:</label>
+    <input [(ngModel)]="product.price" name="price" type="number" required />
+  </div>
+  <div>
+    <label>Image URL (optional):</label>
+    <input [(ngModel)]="product.imageUrl" name="imageUrl" />
+  </div>
+  <button type="submit">Add Product</button>
+</form>
