--- a/webshop-frontend/src/app/components/add-product/add-product.component.html
+++ b/webshop-frontend/src/app/components/add-product/add-product.component.html
@@ -12,8 +12,8 @@
     <input [(ngModel)]="product.price" name="price" type="number" required />
   </div>
   <div>
-    <label>Image URL (optional):</label>
-    <input [(ngModel)]="product.imageUrl" name="imageUrl" />
+    <label>Image:</label>
+    <input type="file" (change)="onFileSelected($event)" />
   </div>
   <button type="submit">Add Product</button>
 </form>
