--- a/webshop-frontend/src/app/components/home/home.component.html
+++ b/webshop-frontend/src/app/components/home/home.component.html
@@ -1,7 +1,6 @@
 <div *ngFor="let product of products">
-    <h2>{{ product.name }}</h2>
-    <p>{{ product.description }}</p>
-    <p>{{ product.price | currency }}</p>
-    <img [src]="product.imageUrl" alt="{{ product.name }}" />
-  </div>
-  
+  <h2>{{ product.name }}</h2>
+  <p>{{ product.description }}</p>
+  <p>{{ product.price | currency }}</p>
+  <img *ngIf="product.imageUrl" [src]="'http://localhost:5000' + product.imageUrl" alt="{{ product.name }}">
+</div>
