--- a/webshop-frontend/src/app/components/add-category/add-category.component.html
+++ b/webshop-frontend/src/app/components/add-category/add-category.component.html
@@ -1,1 +1,13 @@
-<p>add-category works!</p>
+<div>
+    <h2>Add Category</h2>
+    <form (ngSubmit)="onSubmit()">
+      <label for="name">Category Name:</label>
+      <input type="text" id="name" [(ngModel)]="category.name" name="name" required />
+  
+      <label for="description">Description:</label>
+      <input type="text" id="description" [(ngModel)]="category.description" name="description" required />
+  
+      <button type="submit">Add Category</button>
+    </form>
+  </div>
+  
