--- a/webshop-frontend/src/app/components/home/home.component.html
+++ b/webshop-frontend/src/app/components/home/home.component.html
@@ -1,3 +1,10 @@
+<div *ngIf="categories.length > 0">
+  <h2>Categories</h2>
+  <ul>
+    <li *ngFor="let category of categories">{{ category.name }}</li>
+  </ul>
+</div>
+
 <div *ngFor="let product of products">
   <h2>{{ product.name }}</h2>
   <p>Category: {{ product.category_name }}</p>
